--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>QASystem</artifactId>
+    <artifactId>QA_backed</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>QASystem</name>
     <description>QASystem</description>
