--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,19 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
         </dependency>
         <!--   alibaba连接池     -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.1.12</version>
+        </dependency>
+        <!--    密码加密   -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.5.8</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
