--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,8 +21,14 @@ spring:
     url: jdbc:mysql:///qa_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource #指定使用druid的连接池
+  servlet:
+    multipart:
+      max-file-size: 10MB
 
 mybatis:
   type-aliases-package: "com.example.qasystem.org.domain.entity, com.example.qasystem.org.domain.query" # 别名
 #  mapper-locations: classpath:mapper/UserMapper.xml #扫描SQL映射文件
   #config-location: mybatis-config.xml #mybatis配置文件
+
+file:
+  image-upload-path: D:/workspace/QASystem/QA_backed/uploads/images/
