feat(*):实现富文本图片资源上传及访问

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,12 @@ spring:
   servlet:
     multipart:
       max-file-size: 10MB
+  mvc:
+    # 资源访问的前缀
+    static-path-pattern: /${file.image-pattern-path}/**
+  # 扫描的资源路径
+  resources:
+    static-locations: classpath:/resources/,classpath:/static/,file:${file.image-upload-path}
 
 mybatis:
   type-aliases-package: "com.example.qasystem.org.domain.entity, com.example.qasystem.org.domain.query" # 别名
@@ -31,4 +37,5 @@ mybatis:
   #config-location: mybatis-config.xml #mybatis配置文件
 
 file:
+  image-pattern-path: files
   image-upload-path: D:/workspace/QASystem/QA_backed/uploads/images/
