--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,41 +1,3 @@
-server:
-  port: 8080
-
-logging:
-  level:
-    root: info #全局使用info级别
-    com.example: trace #指定org.example包下的日志使用trace级别
-  file:
-    path: logs #日志保存路径
-    max-size: 10MB #最多10MB就会删除老的日志
-    max-history: 7 #最多保留7天就会删除老的日志
-    name: logs/springboot.log #日志文件名
-  pattern: #指定日志的格式
-    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} - %msg%n" #输出到文件的格式
-    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} - %msg%n" #输出到控制台的格式
-
 spring:
-  datasource:
-    username: root
-    password: '000423'
-    url: jdbc:mysql:///qa_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-    driver-class-name: com.mysql.jdbc.Driver
-    type: com.alibaba.druid.pool.DruidDataSource #指定使用druid的连接池
-  servlet:
-    multipart:
-      max-file-size: 10MB
-  mvc:
-    # 资源访问的前缀
-    static-path-pattern: /${file.image-pattern-path}/**
-  # 扫描的资源路径
-  resources:
-    static-locations: classpath:/resources/,classpath:/static/,file:${file.image-upload-path}
-
-mybatis:
-  type-aliases-package: "com.example.qasystem.org.domain.entity, com.example.qasystem.org.domain.query" # 别名
-#  mapper-locations: classpath:mapper/UserMapper.xml #扫描SQL映射文件
-  #config-location: mybatis-config.xml #mybatis配置文件
-
-file:
-  image-pattern-path: files
-  image-upload-path: D:/workspace/QASystem/QA_backed/uploads/images/
+  profiles:
+    active: dev	# 开发环境
