--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,14 +21,14 @@ logging:
 spring:
   datasource:
     username: root
-    password: 'A@123456.'
-    url: jdbc:mysql://121.40.225.229:3306/Forum?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    password: '123456'
+    url: jdbc:mysql:///Forum?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource #指定使用druid的连接池
   redis:
-    host: 121.40.225.229
+    host: localhost
     port: 6379
-    password: 'A@123456.'
+    password: ''
     lettuce:
       pool:
         max-active: 8
