--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -59,10 +59,9 @@ spring:
     resources:
       static-locations: classpath:/resources/,classpath:/static/,file:${file.image-upload-path}
 
-mybatis:
-  type-aliases-package: "com.example.qasystem.*.domain.*" # 别名
-  #  mapper-locations: classpath:mapper/UserMapper.xml #扫描SQL映射文件
-  #config-location: mybatis-config.xml #mybatis配置文件
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 # 静态资源映射配置
 file:
